# api-tests

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .gitignore  .pre-commit-config.yaml  .yamlignore  .yamllint.yaml  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/tests/: test_api.yaml
