[project]
name = "{{ cookiecutter.project_slug }}"
description = "{{ cookiecutter.project_short_description }}"
version = "{{ cookiecutter.project_version }}"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "pytest-loco (>=1.4.0,<2.0.0)",
    "pytest-loco-http (>=1.3.6,<2.0.0)",
    "pytest-loco-json (>=1.3.6,<2.0.0)",
]

[dependency-groups]
dev = [
    "pre-commit (>=4.5.1,<5.0.0)",
    "yamllint (>=1.38.0,<2.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev]
optional = true

[tool.pytest.ini_options]
minversion = "9.0.0"
testpaths = ["tests"]
addopts = [
    "--strict-config",
    "--tb", "short",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
